--- a/toby/.classpath
+++ b/toby/.classpath
@@ -15,5 +15,9 @@
 	<classpathentry kind="lib" path="JARs for tobe spring 1.5 spring IoC/spring-core-5.1.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="JARs for tobe spring 1.5 spring IoC/spring-expression-5.1.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="JARs for tobe spring 1.5 spring IoC/spring-jdbc-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="JARs for tobe spring 1.5 spring IoC/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="JARs for tobe spring 1.5 spring IoC/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="JARs for tobe spring 1.5 spring IoC/spring-test-5.0.10.RELEASE.jar"/>
+	<classpathentry kind="lib" path="JARs for tobe spring 1.5 spring IoC/org.springframework.transaction-3.1.0.release.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
